--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,18 +11,20 @@ source:
   sha256: 58c8abb07dcb441e6ee4b11d8df0ac856038f944ab98b7be6b27b2a3c7feef19
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
     - pip
-    - setuptools-scm
-    - toml
-    - python >=3.6
+    - python >=3.7
+
+    # See the build-system.requires section of pyproject.toml
+    - hatchling >=0.22.0
+    - hatch-vcs
   run:
-    - python >=3.6
+    - python >=3.7
 
 test:
   imports:
