--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,10 +29,10 @@ test:
     - platformdirs
   commands:
     - pip check
-    - mypy -p platformdirs
+    - mypy -p platformdirs --ignore-missing-imports
   requires:
     - pip
-    - mypy --ignore-missing-imports
+    - mypy
 
 about:
   home: https://github.com/platformdirs/platformdirs
