--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,18 +11,18 @@ source:
 build:
   number: 0
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   host:
     - pip
     - python >=3.7
     # See the build-system.requires section of pyproject.toml
-    - hatchling >=1.14
+    - hatchling >=1.17
     - hatch-vcs >=0.3
   run:
     - python >=3.7
-    - typing-extensions >=4.5
+    - typing-extensions >=4.6.3
 
 test:
   imports:
