--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,11 +18,11 @@ requirements:
     - pip
     - python >=3.7
     # See the build-system.requires section of pyproject.toml
-    - hatchling >=1.17
+    - hatchling >=1.17.1
     - hatch-vcs >=0.3
   run:
     - python >=3.7
-    - typing-extensions >=4.6.3
+    - typing_extensions >=4.7.1
 
 test:
   imports:
